mas-crm/force-app/main/default/objects/Registered_Product__c/Registered_Product__c.object-meta.xml
<CustomObject>
    <label>Registered Product</label>
    <nameField>
        <label>Registered Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registered Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>