mas-crm/force-app/main/default/objects/Registered_Product__c/fields/AMC_Active__c.field-meta.xml
<CustomField>
    <fullName>AMC_Active__c</fullName>
    <formula>TODAY() &lt;= AMC_Expiry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMC Active</label>
    <type>Checkbox</type>
</CustomField>