mas-crm/force-app/main/default/objects/Registered_Product__c/fields/AMC_Expiry__c.field-meta.xml
<CustomField>
    <fullName>AMC_Expiry__c</fullName>
    <label>AMC Expiry</label>
    <type>Date</type>
</CustomField>