mas-crm/force-app/main/default/objects/Registered_Product__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Registered Product Owner Lookup</relationshipLabel>
    <relationshipName>Registered_Products</relationshipName>
    <type>Lookup</type>
</CustomField>