mas-crm/force-app/main/default/objects/Registered_Product__c/fields/Defective__c.field-meta.xml
<CustomField>
    <fullName>Defective__c</fullName>
    <label>Defective</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates if the product is defective and requires service</description>
</CustomField>