mas-crm/force-app/main/default/objects/Registered_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Registered Product Type Lookup</relationshipLabel>
    <relationshipName>Registered_Products</relationshipName>
    <type>Lookup</type>
</CustomField>