mas-crm/force-app/main/default/objects/Registered_Product__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <displayFormat>PRD--{0000}</displayFormat>
    <label>Product ID</label>
    <type>AutoNumber</type>
</CustomField>