mas-crm/force-app/main/default/objects/Registered_Product__c/fields/Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Service_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Case</label>
    <referenceTo>Service_Case__c</referenceTo>
    <relationshipLabel>Registered Products</relationshipLabel>
    <relationshipName>Registered_Products</relationshipName>
    <type>Lookup</type>
</CustomField>