mas-crm/force-app/main/default/objects/Registered_Product__c/fields/Warranty_Expired__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expired__c</fullName>
    <formula>TODAY() &lt; Warranty_Expiry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Expired</label>
    <type>Checkbox</type>
</CustomField>