mas-crm/force-app/main/default/objects/Registered_Product__c/fields/Warranty_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expiry__c</fullName>
    <label>Warranty Expiry</label>
    <type>Date</type>
</CustomField>