mas-crm/force-app/main/default/objects/Registered_Product__c/validationRules/AMC_Expiry_after_Purchase.validationRule-meta.xml
<ValidationRule>
    <fullName>AMC_Expiry_after_Purchase</fullName>
    <active>true</active>
    <errorConditionFormula>Purchase_Date__c &gt;  AMC_Expiry__c</errorConditionFormula>
    <errorMessage>AMC Expiry must be after the Purchase Date</errorMessage>
</ValidationRule>