mas-crm/force-app/main/default/objects/Registered_Product__c/validationRules/Warranty_Expiry_after_Purchase.validationRule-meta.xml
<ValidationRule>
    <fullName>Warranty_Expiry_after_Purchase</fullName>
    <active>true</active>
    <errorConditionFormula>Warranty_Expiry__c  &lt;=  Purchase_Date__c</errorConditionFormula>
    <errorDisplayField>Warranty_Expiry__c</errorDisplayField>
    <errorMessage>Warranty Expiry must be after Purchase Date</errorMessage>
</ValidationRule>